Add:HOME page of reading

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,4 +15,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+      body{
+          width: 1263px;
+          /*min-width: 1263px;*/
+          /*max-width: 1263px;*/
+      }
+  </style>
 </html>
