--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="zh">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>Mirage</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+</noscript>
+<div id="blur"></div>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
+<style>
+    body {
+        background: #efefef;
+    }
+        /*body {*/
+        /*    min-height: 100vh;*/
+        /*    background: url("https://picsum.photos/id/1000/1920/1080") no-repeat;*/
+        /*    background-size: auto 100%;*/
+        /*}*/
+
+        /*#blur {*/
+        /*    position: fixed;*/
+        /*    height: 100vh;*/
+        /*    width: 100vw;*/
+        /*    backdrop-filter: blur(3px);*/
+        /*}*/
+</style>
 </html>
